# duckdb-hive-metastore

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  _extension_code_quality.yml  _extension_distribution.yml
src/: CMakeLists.txt  hive_metastore_extension.cpp  hms_api.cpp  hms_client.cpp  hms_format_detector.cpp  hms_path_utils.cpp  hms_utils.cpp
src/include/: hive_metastore_extension.hpp  hms_api.hpp  hms_client.hpp  hms_constants.hpp  hms_format_detector.hpp  hms_lineage.hpp  hms_path_utils.hpp  hms_utils.hpp
src/include/storage/: hms_catalog.hpp  hms_catalog_set.hpp  hms_schema_entry.hpp  hms_schema_set.hpp  hms_table_entry.hpp  hms_table_set.hpp  hms_transaction.hpp  hms_transaction_manager.hpp
src/storage/: CMakeLists.txt  hms_catalog.cpp  hms_catalog_set.cpp  hms_clear_cache.cpp  hms_schema_entry.cpp  hms_schema_set.cpp  hms_table_entry.cpp  hms_table_set.cpp  hms_transaction.cpp  hms_transaction_manager.cpp
src/thrift/: CMakeLists.txt  hive_metastore.thrift
test/: Dockerfile.spark  README.md  docker-compose.yml  hive-site.xml  seed_hive_data_spark.py
test/sql/: hive_metastore.test
test/sql/avro/: data_access_avro.test  describe_avro_table.test
test/sql/basic/: cross_table_queries.test  list_databases.test  show_tables_from_database.test
test/sql/csv/: data_access_csv.test  describe_csv_table.test
test/sql/delta/: data_access_delta.test  describe_delta_table.test
test/sql/hive/: data_access_hive_partitions.test  describe_hive_partitioned_table.test  test_decimal_partitioning.test  test_multi_partitioning.test  test_type_mapping.test
test/sql/iceberg/: data_access_iceberg.test  describe_iceberg_table.test
test/sql/parquet/: data_access_parquet.test  describe_parquet_table.test
